--- a/themes/PaperMod/assets/css/extended/style.css
+++ b/themes/PaperMod/assets/css/extended/style.css
@@ -4,7 +4,7 @@
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em;
-    margin-bottom: 20px; 
+    margin-bottom: 5px; 
     /* Adjust as needed */
     animation: 
       typing 2.2s steps(20, end),
